RESOLVED FIXED278854
REGRESSION(281966@main): The URL passed to `WebPageProxy::maybeInitializeSandboxExtensionHandle` is null
https://bugs.webkit.org/show_bug.cgi?id=278854
Summary REGRESSION(281966@main): The URL passed to `WebPageProxy::maybeInitializeSand...
Vitaly Dyackhov
Reported 2024-08-29 04:42:07 PDT
In `ProvisionalPageProxy::goToBackForwardItem()` we create an `itemURL` which we then pass by reference to `WebPageProxy::maybeInitializeSandboxExtensionHandle()`. But we also move it while creating the compilation handler, which makes it null.
Attachments
Vitaly Dyackhov
Comment 1 2024-08-29 04:45:41 PDT
EWS
Comment 2 2024-08-29 09:12:52 PDT
Committed 282911@main (55a33a45250a): <https://commits.webkit.org/282911@main> Reviewed commits have been landed. Closing PR #32886 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-08-29 09:13:15 PDT
Note You need to log in before you can comment on or make changes to this bug.