Cherry-pick 282911@main (55a33a45250a). https://bugs.webkit.org/show_bug.cgi?id=278854

REGRESSION(281966@main): The URL passed to `WebPageProxy::maybeInitializeSandboxExtensionHandle` is null
    https://bugs.webkit.org/show_bug.cgi?id=278854

    Reviewed by Chris Dumez.

    In `ProvisionalPageProxy::goToBackForwardItem()` we create an `itemURL`
    which we then pass by reference to `WebPageProxy::maybeInitializeSandboxExtensionHandle()`.
    But we also move it while creating the compilation handler, which makes it null.
    We should just make a copy.

    * Source/WebKit/UIProcess/ProvisionalPageProxy.cpp:
    (WebKit::ProvisionalPageProxy::goToBackForwardItem):

    Canonical link: https://commits.webkit.org/282911@main

Canonical link: https://commits.webkit.org/282416.47@webkitglib/2.46